# nmb-predictor

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.antigravity/: rules.md
.github/workflows/: deploy.yml
backend/: Dockerfile  main.py  requirements.txt  test_api.py
backend/agents/: pk_agent.py  reversal_agent.py  simulator_agent.py
backend/models/: schemas.py
backend/pk/: reversal.py  rocuronium.py
backend/tests/: conftest.py
frontend/: .firebaserc  build_errors.txt  package-lock.json  package.json  ts_errors.txt
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Dashboard.tsx  PatientModal.tsx
frontend/src/types/: index.ts
